# Forge

./: .gitignore  CMakeLists.txt  Forge.sln  README.md  imgui.ini
Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  Main.cpp  MyGame.cpp  MyGame.h
Core/Dependecies/include/glad/: glad.h  glad_egl.h  glad_glx.h  glad_wgl.h
Core/Dependecies/src/: glad.c  glad_wgl.c
Core/Dependecies/src/glad/: glad_egl.c  glad_glx.c
Core/Shaders/: SpriteShader.glsl  basic.glsl  fs.glsl
Core/Source/: Defines.h  Types.h
Core/Source/Containers/: Iterator.h  String.cpp  String.h
Core/Source/Core/: Engine.cpp  Engine.h  Game.cpp  Game.h
Core/Source/EntityComponent/: Component.h  ComponentManager.cpp  ComponentManager.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  SpriteRenderer.cpp  SpriteRenderer.h  TransformComponent.cpp  TransformComponent.h
Core/Source/EventSystem/: Delegate.h  Event.cpp  Event.h
Core/Source/FileSystem/: File.h  FileSystem.cpp  FileSystem.h
Core/Source/FileSystem/Windows/: WINFileSystem.cpp  WINFileSystem.h
Core/Source/Graphics/: Buffer.cpp  Buffer.h  BufferLayout.cpp  BufferLayout.h  Camera.cpp  Camera.h  Context.cpp  Context.h  DirectionalLight.cpp  DirectionalLight.h  Drawable.cpp  Drawable.h  Font.cpp  Font.h  GraphicsRenderer.cpp  GraphicsRenderer.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PointLight.cpp  PointLight.h  RenderSurface.cpp  RenderSurface.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderResource.cpp  ShaderResource.h  ShaderUniform.cpp  ShaderUniform.h  SpotLight.cpp  SpotLight.h  (+14 more)
Core/Source/Graphics/OGL/: GLCheck.h  GLGraphicsRenderer.cpp  GLIndexBuffer.cpp  GLIndexBuffer.h  GLRenderSurface.cpp  GLShaderResource.cpp  GLShaderResource.h  GLTexture2DResource.h  GLVertexArray.cpp
Core/Source/Graphics/OpenGL/: GLCheck.h  GLGraphicsRenderer.cpp  GLGraphicsRenderer.h  GLRenderSurface.h  GLShaderResource.cpp  GLShaderResource.h  GLTexture2DResource.cpp  GLTexture2DResource.h  GLVertexArray.h  GLVertexBuffer.cpp  GLVertexBuffer.h  OGLContext.cpp  OGLContext.h  OGLGraphicsRenderer.cpp  OGLGraphicsRenderer.h  OGLIndexBuffer.cpp  OGLIndexBuffer.h  OGLShader.cpp  OGLShader.h  OGLShaderResource.cpp  OGLShaderResource.h  OGLTexture2D.cpp  OGLTexture2D.h  OGLTexture2DResource.cpp  OGLTexture2DResource.h  OGLVertexArray.cpp  OGLVertexArray.h  OGLVertexBuffer.cpp  OGLVertexBuffer.h
Core/Source/Graphics/OpenGL/Windows/: OGLWIN32Context.cpp  OGLWIN32Context.h
Core/Source/Input/: Input.cpp  Input.h
Core/Source/Input/Windows/: WinInput.cpp  WinInput.h
Core/Source/Math/: Color.cpp  Color.h  Frustum.cpp  Frustum.h  Mathf.h  Matrix3.cpp  Matrix3.h  Matrix3x4.cpp  Matrix3x4.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  Rect.cpp  Rect.h  RectI.cpp  RectI.h  Vector2.cpp  Vector2.h  Vector2i.cpp  Vector2i.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Core/Source/Platform/: Application.cpp  Application.h  DefaultApplication.cpp  DefaultApplication.h  Engine.cpp  Engine.h  Window.cpp  Window.h  WindowImpl.h
Core/Source/Platform/Api/: Api.h  Context.h  ContextApi.h  Cursor.h  DeviceCapabilities.h  File.h  FileSystem.cpp  FileSystem.h  Input.cpp  Input.h  InputDevice.h  InputManager.cpp  InputManager.h  KeyboardInputDevice.cpp  KeyboardInputDevice.h  MouseInputDevice.cpp  MouseInputDevice.h  PlatformApiProvider.h  Window.h  WindowSystem.h
Core/Source/Platform/MacOS/: MacOSContextApi.cpp  MacOSCursor.h  MacOSCursor.mm  MacOSDeviceCapabilities.mm  MacOSFileSystem.h  MacOSFileSystem.mm  MacOSPlatformApiProvider.mm  MacOSView.h  MacOSView.mm  MacOSWindow.h  MacOSWindow.mm  MacOSWindowSystem.h  MacOSWindowSystem.mm
Core/Source/Platform/MacOS/Context/OGL/: OGLMacOSContext.h  OGLMacOSContext.mm  OGLView.h  OGLView.mm
Core/Source/Platform/OSX/: OSXContextApi.cpp  OSXContextApi.h  OSXCursor.h  OSXCursor.mm  OSXDeviceCapabilities.mm  OSXFileSystem.h  OSXFileSystem.mm  OSXInput.h  OSXInput.mm  OSXPlatformApiProvider.mm  OSXView.h  OSXView.mm  OSXWindow.h  OSXWindow.mm  OSXWindowSystem.mm
Core/Source/Platform/OSX/Context/OGL/: OGLOSXContext.h  OGLOSXContext.mm  OGLView.h  OGLView.mm
Core/Source/Platform/Win32/: WIN32App.cpp  WIN32App.h  WIN32FileSystem.cpp  WIN32FileSystem.h  WIN32Input.cpp  WIN32Input.h  WIN32PlatformApiProvider.cpp  Win32ContextApi.cpp  Win32ContextApi.h  Win32DeviceCapabilities.cpp  Win32Window.cpp  Win32Window.h  Win32WindowSystem.cpp
Core/Source/Platform/Windows/: WinEngine.cpp  WinEngine.h  WindowWin32.cpp  WindowWin32.h
Core/Source/Resources/: Image.cpp  Image.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Resources.h
Core/Source/Scene/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  ComponentManager.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  Entity.cpp  Entity.h  EntityManager.h  ModelRenderer.cpp  ModelRenderer.h  PointLightComponent.cpp  PointLightComponent.h  Scene.cpp  Scene.h  Script.cpp  Script.h  ScriptComponent.cpp  ScriptComponent.h  SpotLightComponent.cpp  SpotLightComponent.h  SpriteRenderer.cpp  SpriteRenderer.h  TransformComponent.cpp  TransformComponent.h
Core/Source/Serialization/: Member.inl  Meta.inl
Core/Source/Serialization/Serializers/: StringCast.cpp
Core/Source/Serialization/Serializers/JSON/: JsonCast.h  JsonCast.inl
Core/Source/Serialization/detail/: template_helpers.h  template_helpers.inl
Core/Source/Utilities/: ISwitchable.cpp  ISwitchable.h  StringHash.cpp  StringHash.h  Timer.cpp  Timer.h  Utils.h
Core/cmake/: functions.cmake
IMGUIEditor/: CMakeLists.txt  IMGUIEditor.vcxproj  IMGUIEditor.vcxproj.filters  RCa12036  imgui.ini  imgui_log.txt  resource.h
IMGUIEditor/Source/: Main.cpp  imgui_impl.cpp  imgui_impl.h  imgui_impl_old.cpp  imgui_impl_old.h
IMGUIEditor/Source/Controls/: GUICamera.h  GUIEditor.h  GUIHierarchy.h  GUIProperties.h  GUIResources.h  GUIScene.h
Resources/Shaders/: Model.glsl  (+1 more)
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/Resources/Shaders/: Model.glsl
(+2 files in other folders)
